--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="blog_banner d-flex justify-content-end" >
   <div class="" style="width: fit-content">
-    <h1 class= "text-center m-4">Blogs</h1>
+    <h1 class= "text-center m-4">Blog</h1>
     <h1 class= "text-center m-4">Animaux et compagnies</h1>
   </div>
 </div>
