--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,17 +14,17 @@
     </div>
     <div class="col">
       <div class="d-flex flex-row">
-        <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+        <div class="card_banner">
           <h2>🐶</h2>
           <h4 class="my-4">Adoption responsable</h4>
           <p>Aide les utilisateurs à adopter un animal avec amour et en toute responsabilité.</p>
         </div>
-        <div class="card_banner mx-4" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+        <div class="card_banner mx-4">
           <h2>🏥</h2>
           <h4 class="my-4">Services pour animaux</h4>
           <p>Facilite la prise de rendez-vous avec des professionnels locaux.</p>
         </div>
-        <div class="card_banner" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXOgdBLNYmiz98W3mohcIny2sOyvKC_Pgfkw&s); background-size: cover;">
+        <div class="card_banner">
           <h2>📂</h2>
           <h4 class="my-4">Carnet de santé numérique </h4>
           <p>Permet aux propriétaires d’animaux d’accéder à tout moment aux informations médicales de leur compagnon.</p>
