--- a/app/views/professionals/edit_availibilities.html.erb
+++ b/app/views/professionals/edit_availibilities.html.erb
@@ -65,7 +65,9 @@
     <%end%>
   </div>
   <div class="card_pro col-lg-5 col-md-5 col-sm-10 p-4">
-    <div id="available-pro"  data-controller="edit-availabilities" data-edit-availabilities-api-key-value="<%= @professional.id %>" data-edit-availabilities-closed-days-value="<%=@closed_days.to_json.html_safe%>">
+    <div id="available-pro"
+          data-controller="edit-availabilities"
+          data-edit-availabilities-api-key-value="<%= @professional.id %>" data-edit-availabilities-closed-days-value="<%=@closed_days.to_json.html_safe%>">
       <h3 class="text-center my-3" style="text-decoration: underline">Modifier la disponibilité d'un créneau</h3>
       <!-- Sélection de la date (rendu cliquable) -->
       <div class="d-flex flex-row justify-content-center align-items-center">
@@ -84,18 +86,31 @@
     <%# Liste des jours de fermetures %>
     <div class="mt-5">
       <h3 class="text-center my-3" style="text-decoration: underline">Liste des jours de fermetures</h3>
-      <div class="d-flex flex-row justify-content-center align-items-center">
-        <div>
-          Date :
+      <%= simple_form_for ClosingHour.new do |c| %>
+        <div class="d-flex flex-row align-items-center">
+          <div>Date :</div>
+          <div class="date-picker-container" style="width: 90%">
+            <div class="d-flex flex-row justify-content-between align-items-center w-100">
+              <div class="w-100 mx-2">
+                <%= c.input :start_time,
+                        label: false,
+                        as: :string,
+                        input_html: { data: { controller: "datepicker" } },
+                        wrapper_html: { style: "margin: 0px !important" } %>
+                <%= c.hidden_field :whole_day, value: true %>
+                <%= c.hidden_field :professional_id, value: @professional.id %>
+              </div>
+              <div class="d-flex align-items-center">
+                <%= c.submit "Valider", class: "btn btn-primary rounded rounded-4", data: { turbo_action: "replace" } %>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="date-picker-container" style="width: 90%" data-action="click->edit-availabilities#openPicker">
-          <input type="text" data-edit-availabilities-target="selectedDate" >
-        </div>
-      </div>
+      <% end %>
       <div>
         <ul>
-          <% @exceptionnal_closed_days.each do |day| %>
-            <li><%= day.strftime("%d/%m/%Y") %></li>
+          <% @all_closed_days.each do |day| %>
+            <li><%= day[:name] %> : <%= day[:date].strftime("%d-%m-%Y") %></li>
           <% end %>
         </ul>
       </div>
