--- a/app/views/professionals/edit_availibilities.html.erb
+++ b/app/views/professionals/edit_availibilities.html.erb
@@ -84,36 +84,35 @@
       <% end %>
     </div>
     <%# Liste des jours de fermetures %>
-    <div class="mt-5">
-      <h3 class="text-center my-3" style="text-decoration: underline">Liste des jours de fermetures</h3>
-      <%= simple_form_for ClosingHour.new do |c| %>
-        <div class="d-flex flex-row align-items-center">
-          <div>Date :</div>
-          <div class="date-picker-container" style="width: 90%">
-            <div class="d-flex flex-row justify-content-between align-items-center w-100">
-              <div class="w-100 mx-2">
-                <%= c.input :start_time,
+<div class="mt-5" data-controller="calendar-closed-day">
+  <h3 class="text-center my-3" style="text-decoration: underline">Liste des jours de fermetures</h3>
+  <%= simple_form_for ClosingHour.new, data: { turbo_frame: "all_closed_days_list" } do |c| %>
+    <div class="d-flex flex-row align-items-center">
+      <div>Date :</div>
+      <div class="date-picker-container" style="width: 90%">
+        <div class="d-flex flex-row justify-content-between align-items-center w-100">
+          <div class="w-100 mx-2">
+            <%= c.input :start_time,
                         label: false,
                         as: :string,
-                        input_html: { data: { controller: "datepicker" } },
+                        input_html: { data: { controller: "calendar-closed-day", action: "click->calendar-closed-day#openPicker", calendar_closed_day_value: @all_closed_days.to_json } },
                         wrapper_html: { style: "margin: 0px !important" } %>
-                <%= c.hidden_field :whole_day, value: true %>
-                <%= c.hidden_field :professional_id, value: @professional.id %>
-              </div>
-              <div class="d-flex align-items-center">
-                <%= c.submit "Valider", class: "btn btn-primary rounded rounded-4", data: { turbo_action: "replace" } %>
-              </div>
-            </div>
+            <%= c.hidden_field :whole_day, value: true %>
+            <%= c.hidden_field :professional_id, value: @professional.id %>
+          </div>
+          <div class="d-flex align-items-center">
+            <%= c.submit "Valider", class: "btn btn-primary rounded rounded-4" %>
           </div>
         </div>
-      <% end %>
-      <div>
-        <ul>
-          <% @all_closed_days.each do |day| %>
-            <li><%= day[:name] %> : <%= day[:date].strftime("%d-%m-%Y") %></li>
-          <% end %>
-        </ul>
       </div>
     </div>
+  <% end %>
+  <div>
+    <%= turbo_frame_tag :all_closed_days_list do %>
+      <%= render "all_closed_days_list", all_closed_days: @all_closed_days, exceptionnal_closed_days: @exceptionnal_closed_days %>
+    <% end %>
+  </div>
+</div>
+
   </div>
 </div>
