--- a/app/views/professionals/edit_availibilities.html.erb
+++ b/app/views/professionals/edit_availibilities.html.erb
@@ -67,7 +67,8 @@
   <div class="card_pro col-lg-5 col-md-5 col-sm-10 p-4">
     <div id="available-pro"
           data-controller="edit-availabilities"
-          data-edit-availabilities-api-key-value="<%= @professional.id %>" data-edit-availabilities-closed-days-value="<%=@closed_days.to_json.html_safe%>">
+          data-edit-availabilities-api-key-value="<%= @professional.id %>" data-edit-availabilities-closed-days-value="<%=@closed_days.to_json%>"
+          data-edit-availabilities-all-closed-days-value="<%=@all_closed_days.to_json%>">
       <h3 class="text-center my-3" style="text-decoration: underline">Modifier la disponibilité d'un créneau</h3>
       <!-- Sélection de la date (rendu cliquable) -->
       <div class="d-flex flex-row justify-content-center align-items-center">
@@ -84,35 +85,39 @@
       <% end %>
     </div>
     <%# Liste des jours de fermetures %>
-<div class="mt-5" data-controller="calendar-closed-day">
-  <h3 class="text-center my-3" style="text-decoration: underline">Liste des jours de fermetures</h3>
-  <%= simple_form_for ClosingHour.new, data: { turbo_frame: "all_closed_days_list" } do |c| %>
-    <div class="d-flex flex-row align-items-center">
-      <div>Date :</div>
-      <div class="date-picker-container" style="width: 90%">
-        <div class="d-flex flex-row justify-content-between align-items-center w-100">
-          <div class="w-100 mx-2">
-            <%= c.input :start_time,
-                        label: false,
-                        as: :string,
-                        input_html: { data: { controller: "calendar-closed-day", action: "click->calendar-closed-day#openPicker", calendar_closed_day_value: @all_closed_days.to_json } },
-                        wrapper_html: { style: "margin: 0px !important" } %>
-            <%= c.hidden_field :whole_day, value: true %>
-            <%= c.hidden_field :professional_id, value: @professional.id %>
-          </div>
-          <div class="d-flex align-items-center">
-            <%= c.submit "Valider", class: "btn btn-primary rounded rounded-4" %>
+    <div class="mt-5" data-controller="calendar-closed-day">
+      <h3 class="text-center my-3" style="text-decoration: underline">Liste des jours de fermetures</h3>
+      <%= simple_form_for ClosingHour.new, data: { controller: "edit-availabilities"} do |c| %>
+        <div class="d-flex flex-row align-items-center">
+          <div>Date :</div>
+          <div class="date-picker-container" style="width: 90%">
+            <div class="d-flex flex-row justify-content-between align-items-center w-100">
+              <div class="w-100 mx-2">
+                <%= c.input :start_time,
+                      label: false,
+                      as: :string,
+                      input_html: {
+                        data: {
+                          controller: "calendar-closed-day",
+                          action: "click->calendar-closed-day#openPicker",
+                          calendar_closed_day_value: @all_closed_days.to_json
+                        },
+                        id: "closedDaySelectedDate"
+                      },
+                      wrapper_html: { style: "margin: 0px !important" } %>
+                <%= c.hidden_field :whole_day, value: true %>
+                <%= c.hidden_field :professional_id, value: @professional.id %>
+              </div>
+              <div class="d-flex align-items-center">
+                <%= c.submit "Valider",
+                class: "btn btn-primary rounded rounded-4",
+                data: { action: "click->edit-availabilities#createClosedDay", data_edit_availabilities_api_key_value:@professional.id } %>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      <% end %>
+      <%=render "all_closed_days_list", all_closed_days: @all_closed_days, exceptionnal_closed_days: @exceptionnal_closed_days%>
     </div>
-  <% end %>
-  <div>
-    <%= turbo_frame_tag :all_closed_days_list do %>
-      <%= render "all_closed_days_list", all_closed_days: @all_closed_days, exceptionnal_closed_days: @exceptionnal_closed_days %>
-    <% end %>
-  </div>
-</div>
-
   </div>
 </div>
