--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,9 @@
 // Specific CSS for your home-page
 .banner {
-  background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url('https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//banner.jpg');
+  background-image: linear-gradient(rgba(173, 161, 161, 0.33),rgba(0,0,0,0.1)), url('https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//lukasz-szmigiel-tWvkoNvOX20-unsplash.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: center 40%;
+
   padding: 200px 0;
   width: 100%;
   border-radius: 0 0 25px 25px;
@@ -18,9 +19,9 @@
 
 .banner h1 {
   margin: 0;
-  color: white;
+  color: #171A21;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
-  font-size: 40px;
+  font-size: 50px;
   font-weight: lighter;
 
   @media (max-width: 768px) {
