--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -6,24 +6,24 @@
   <%# search zone %>
   <div class="my-5">
     <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
-      <div class="d-flex justify-content-center search-form-control form-group mb-3", style="width: 100%;" >
-        <div class="d-flex align-items-center search-form-control form-group w-form">
-          <%= text_field_tag :query,
+    <div class="d-flex justify-content-center search-form-control form-group mb-3", style="width: 100%;" >
+      <div class="d-flex align-items-center search-form-control form-group w-form">
+        <%= text_field_tag :query,
               params[:query],
               class: "form-control search-bar bg-secondary ps-5 w-75",
               placeholder: "Rechercher un service..."
           %>
-          <%= text_field_tag :query,
-              params[:query],
+        <%= text_field_tag :query_address,
+              params[:query_address],
               class: "form-control search-bar bg-secondary ps-5 w-25",
               placeholder: "Ville..."
           %>
-          <div>
-            <%= submit_tag "Rechercher", class: "btn_custom search-bar" %>
-          </div>
+        <div>
+          <%= submit_tag "Rechercher", class: "btn_custom search-bar" %>
         </div>
       </div>
-    <% end %>
+    </div>
+  <% end %>
   </div>
 </div>
 <%# body %>
