--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -65,16 +65,16 @@
     <% else %>
       <% @appointments.each do |a| %>
         <div class="col-lg-4 col-md-12 col-12">
-          <a href="<%=professional_appointment_path(a.professional, a)%>" style="text-decoration: none; color: black;">
-            <div class="card_pro p-4 m-1 text-start" style="background-color: #f7e6d4;">
+          <a href="<%=professional_appointment_path(a.professional, a)%>" target="_blank" style="text-decoration: none; color: black;">
+            <div class="card_pro p-4 m-1 text-start" >
               <div class="text-end">
                 <div >
-                  <p><%= a.start_time.strftime("%d/%m/%Y")%></p>
-                  <p><%= a.start_time.strftime("%H:%M")%></p>
+                  <p><%= a.start_time.strftime("%d/%m/%Y")%> à <%= a.start_time.strftime("%H:%M")%></p>
                 </div>
               </div>
               <p>Professionnel : <strong><%= a.professional.name %></strong></p>
-              <p style="word-wrap: break-word; word-break: break-word;">Motif de la visite : <%= truncate(a.reason, length: 100, omission: '...') %></p>
+              <p style="word-wrap: break-word; word-break: break-word;">Motif de la visite : <%= a.reason %></p>
+              <p style="word-wrap: break-word; word-break: break-word;">Commentaire : <%= a.comment ? a.comment : "Pas de commentaires" %></p>
             </div>
           </a>
         </div>
@@ -99,7 +99,7 @@
         <div class="d-flex flex-wrap" id="vaccins-container" >
           <% @vaccinations.each do |vaccin| %>
             <% i = i+1 %>
-            <div class="card_pro m-1 text-start d-flex flex-row vaccination-item" style="background-color: #f7e6d4;">
+            <div class="card_pro m-1 text-start d-flex flex-row vaccination-item" >
               <p><%=i%>.</p>
               <div class="mx-2">
                 <div class="d-flex flex-row">
