--- a/app/views/professionals/_appointment_details.html.erb
+++ b/app/views/professionals/_appointment_details.html.erb
@@ -1,37 +1,47 @@
 <%= turbo_frame_tag :appointment_details do %>
   <% @appointment = Appointment.find(appointment) %>
-  <div class="card_pro d-flex flex-row justify-content-between">
-    <div>
-      <div class="d-flex flex-row">
-        <p>Nom : </p>
-        <p class="mx-2"> <%= @appointment.user.first_name%> <%= @appointment.user.last_name%></p>
+  <div class="card_pro">
+    <div class="d-flex flex-row justify-content-between">
+      <div class="w-100">
+        <div class="d-flex flex-row">
+          <p>Nom : </p>
+          <p class="mx-2"> <%= @appointment.user.first_name%> <%= @appointment.user.last_name%></p>
+        </div>
+        <div class="d-flex flex-row">
+          <p>Date : </p>
+          <p class="mx-2"> <%= @appointment.start_time.strftime("%d-%m-%Y")%> à <%= @appointment.start_time.strftime("%H:%M")%></p>
+        </div>
+        <div class="d-flex flex-row my-1">
+          <p>Animal concerné : </p>
+          <p class="mx-2"> <%= Pet.find(@appointment.pet_id).name%> </p>
+        </div>
+        <div class="d-flex flex-row my-1">
+          <p>Type : </p>
+          <p class="mx-2"> <%= Pet.find(@appointment.pet_id).species%> </p>
+        </div>
+        <div class="d-flex flex-row my-1">
+          <p>Motif du rendez-vous : </p>
+          <p class="mx-2"> <%= @appointment.reason%> </p>
+        </div>
       </div>
-      <div class="d-flex flex-row">
-        <p>Date : </p>
-        <p class="mx-2"> <%= @appointment.start_time.strftime("%d-%m-%Y")%> à <%= @appointment.start_time.strftime("%H:%M")%></p>
-      </div>
-      <div class="d-flex flex-row my-1">
-        <p>Animal concerné : </p>
-        <p class="mx-2"> <%= Pet.find(@appointment.pet_id).name%> </p>
-      </div>
-      <div class="d-flex flex-row my-1">
-        <p>Type : </p>
-        <p class="mx-2"> <%= Pet.find(@appointment.pet_id).species%> </p>
-      </div>
-      <div class="d-flex flex-row my-1">
-        <p>Motif du rendez-vous : </p>
-        <p class="mx-2"> <%= @appointment.reason%> </p>
+      <div class="d-flex flex-column justify-content-start align-items-center">
+        <% if Pet.find(@appointment.pet_id).photo.present? %>
+          <%= cl_image_tag Pet.find(@appointment.pet_id).photo.key,  style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;" %>
+        <% else %>
+          <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", alt:"photo_pet_default", style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;")%>
+        <% end %>
+        <% if @professional.specialty=="Vétérinaire"%>
+          <a href="<%=pet_show_for_pro_path(@appointment.pet_id)%>" target="_blank">Voir le carnet de santé</a>
+        <%end%>
       </div>
     </div>
-    <div class="d-flex flex-column justify-content-start align-items-center">
-      <% if Pet.find(@appointment.pet_id).photo.present? %>
-        <%= cl_image_tag Pet.find(@appointment.pet_id).photo.key,  style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;" %>
-      <% else %>
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", alt:"photo_pet_default", style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;")%>
+    <div class="w-100">
+      <%= simple_form_for @appointment, url: appointment_path(@appointment), method: :patch do |a| %>
+        <%= a.input :comment, label: "Commentaire : ",
+                              as: :text,
+                              input_html: { rows: 3, style: "width: 100%" }%>
+        <%= a.submit "valider", class: "btn btn_custom", data: {controller: "alert", action: "click->alert#commentSave" }%>
       <% end %>
-      <% if @professional.specialty=="Vétérinaire"%>
-        <a href="<%=pet_show_for_pro_path(@appointment.pet_id)%>" target="_blank">Voir le carnet de santé</a>
-      <%end%>
     </div>
   </div>
 <% end %>
